namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-interventions-deploy-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-interventions-deploy-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "ds-risk-team"
    cloud-platform.justice.gov.uk/application: "Interventions Deploy"
    cloud-platform.justice.gov.uk/owner: ": "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/interventions-deploy"
    cloud-platform.justice.gov.uk/team-name: "probation-ds-risk-leads"
    cloud-platform.justice.gov.uk/review-after: ""
